// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeDatePicker should match the snapshot 1`] = `
<div>
  <styled.label />
  <styled.input
    onChange={[Function]}
    type="date"
  />
</div>
`;

exports[`NativeDatePicker should match the snapshot when labeled 1`] = `
<div>
  <styled.label>
    Label
  </styled.label>
  <styled.input
    onChange={[Function]}
    type="date"
  />
</div>
`;
